# fast-nb

./: CMakeLists.txt  README.md  build.py  fast_nb.cpp  log_comb.hpp  log_comb_gcc.hpp  pyproject.toml  setup.py
.github/workflows/: build.yml
cmake/: FastNBConfig.cmake.in
fast_negative_binomial/: __init__.py  base.hpp  base_nb.hpp  bindings.cpp  cache.hpp  eigen_nb.hpp  eigen_nb_cdf.hpp  eigen_nb_icdf.hpp  eigen_nb_jac.hpp  fast_nb.cpp  fast_nb.hpp  log_comb.hpp  log_comb_gcc.hpp  main.cpp  optimise.hpp  test.cpp  utils.hpp  vector_nb.hpp
src/: bindings.cpp  fast_nb.cpp  main.cpp  test.cpp
tests/: benchmark.py  test_python.ipynb  tests.py
