[build-system]
requires = ["setuptools>=42", "wheel", "cmake>=3.18", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "negative_binomial"
version = "0.1.0"
description = "Python bindings for Negative Binomial PMF"
authors = ["Daniel O'Hanlon <dpohanlon@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fast_negative_binomial" }]
keywords = ["negative binomial", "pmf", "pybind11", "C++", "Poetry"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: OS Independent",
]

include = [
    "src/**",
    "CMakeLists.txt",
    "build.py",
    "LICENSE",
    "README.md",
    ".gitignore",
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"

[tool.poetry.group.dev.dependencies]
cibuildwheel = "^2.22.0"
